--- a/src/components/Department/department__title.css
+++ b/src/components/Department/department__title.css
@@ -2,6 +2,8 @@
     padding: 0;
     margin: 0 0 15px 0;
     position: relative;
+    transition: color 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .department__title::after {
@@ -12,4 +14,8 @@
     width: 100%;
     height: 1px;
     background-color: #fff;
+}
+
+.department__title:hover {
+    color: #ccc;
 }
