--- a/src/components/DepartmentScreen/departmentscreen__item.css
+++ b/src/components/DepartmentScreen/departmentscreen__item.css
@@ -1,8 +1,7 @@
-.department__data {
+.departmentscreen__item {
     padding: 0;
     margin: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 10px;
 }
