--- a/src/components/ToolScreen/toolscreen__input.css
+++ b/src/components/ToolScreen/toolscreen__input.css
@@ -4,7 +4,7 @@
     outline: none;
     border-radius: 2px;
     padding: 8px 5px;
-    margin: 0 0 15px;
+    margin: 0;
     min-height: 19px;
     width: 95%;
     font-size: 14px;
