--- a/src/components/DepartmentScreen/departmentscreen.css
+++ b/src/components/DepartmentScreen/departmentscreen.css
@@ -5,8 +5,16 @@
     width: calc(100% - 140px);
     height: 100vh;
     padding: 70px 70px 20px;
-    background-color: #202020;
     visibility: hidden;
     opacity: 0;
     transition: visibility 0.4s, opacity 0.4s ease-out;
+}
+
+#light .departmentscreen {
+    background-color: #F0FFF0;
+    color: #2F4F4F;
+}
+
+#dark .departmentscreen {
+    background-color: #202020;
 }
