--- a/src/components/Navigation/navigation__button_gray.css
+++ b/src/components/Navigation/navigation__button_gray.css
@@ -11,3 +11,13 @@
       display: none;
    }
 }
+
+#light .navigation__button_gray {
+   background-color: #DCDCDC;
+   color: #000;
+}
+
+#dark .navigation__button_gray {
+   background-color: #313131;
+   color: #fff;
+}
