--- a/src/components/App/page.css
+++ b/src/components/App/page.css
@@ -1,6 +1,6 @@
 .page {
    max-width: 1600px;
-   min-height: 100vh;
+   min-height: calc(100vh - 84px);
    margin: 0 auto;
    padding: 0 15px;
    font-family: 'Inter', Arial, sans-serif;
