--- a/src/components/App/root.css
+++ b/src/components/App/root.css
@@ -1,9 +1,17 @@
 .root {
-   background: #202020;
-   min-height: 100vh;
-   color: white;
+   min-height: calc(100vh);
    z-index: 2;
    position: relative;
+}
+
+#light {
+   background-color: #F0FFF0;
+   color:#2F4F4F;
+}
+
+#dark {
+   background-color: #202020;
+   color: #fff;
 }
 
 html {
