--- a/src/components/Department/department.css
+++ b/src/components/Department/department.css
@@ -1,4 +1,6 @@
 .department {
     padding: 0;
     margin: 0 0 20px 0;
+    border-radius: 3px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
