--- a/src/components/Department/department__item.css
+++ b/src/components/Department/department__item.css
@@ -1,7 +1,15 @@
 .department__item {
     padding: 10px;
     margin: 0;
+    border-radius: 3px;
+}
+
+#light .department__item {
+    background-color: #C0C0C0;
+    color: #2F4F4F;
+}
+
+#dark .department__item {
     background-color: #424242;
     color: #fff;
-    border-radius: 3px;
 }
