--- a/src/components/DepartmentScreen/departmentscreen__block.css
+++ b/src/components/DepartmentScreen/departmentscreen__block.css
@@ -1,8 +1,13 @@
 .departmentscreen__block {
     padding: 10px 15px;
     margin: 0;
-    min-width: 47%;
-    min-height: 395px;
+    min-width: 30%;
+    min-height: 480px;
     background-color: #424242;
     border-radius: 3px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+
+#light .departmentscreen__block {
+    background-color: #C0C0C0;
+ }
