--- a/src/components/Navigation/navigation__link.css
+++ b/src/components/Navigation/navigation__link.css
@@ -4,7 +4,6 @@
    font-weight: 400;
    font-size: 14px;
    line-height: 18px;
-   color: #fff;
    text-decoration: none;
    transition: opacity 0.3s ease-in-out;
 }
@@ -15,4 +14,12 @@
 
 .active {
    font-weight: 500;
+}
+
+#light .navigation__link {
+   color: #000;
+}
+
+#dark .navigation__link {
+   color: #fff;
 }
