--- a/src/components/SearchForm/searchform__input.css
+++ b/src/components/SearchForm/searchform__input.css
@@ -5,6 +5,7 @@
    border: 0;
    border-radius: 8px;
    color: #fff;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .searchform__input::placeholder {
@@ -18,4 +19,13 @@
 
 .searchform__input:focus {
    outline: 1px solid #6666FF;
+}
+
+#light .searchform__input {
+   background-color: #ffbe98;
+   color: #2F4F4F;
+}
+
+#light .searchform__input:focus {
+   outline: 1px solid #DC143C;
 }
