--- a/src/components/ToolScreen/toolscreen.css
+++ b/src/components/ToolScreen/toolscreen.css
@@ -10,3 +10,8 @@
     opacity: 0;
     transition: visibility 0.4s, opacity 0.4s ease-out;
 }
+
+#light .toolscreen {
+    background-color: #F0FFF0;
+    color:#2F4F4F;
+}
