--- a/src/components/ToolScreen/toolscreen__button.css
+++ b/src/components/ToolScreen/toolscreen__button.css
@@ -4,6 +4,7 @@
     background-color: #6666FF;
     border: none;
     border-radius: 3px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     font-weight: 500;
     font-size: 14px;
     color: #fff;
@@ -16,4 +17,9 @@
 
 .toolscreen__button:hover {
     opacity: 0.8;
+}
+
+#light .toolscreen__button {
+    background-color: #00BFFF;
+    color: #fff;
 }
