--- a/src/components/ToolsCard/toolscard__item_green.css
+++ b/src/components/ToolsCard/toolscard__item_green.css
@@ -5,3 +5,8 @@
     color: #000;
     font-weight: bold;
 }
+
+#light .toolscard__item_green {
+    color:#2F4F4F;
+    background-color: #00FF7F;
+ }
