--- a/src/components/ToolsCardList/toolscardlist__button.css
+++ b/src/components/ToolsCardList/toolscardlist__button.css
@@ -4,6 +4,7 @@
     background-color: #6666FF;
     border: 0;
     border-radius: 3px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     color: #fff;
     cursor: pointer;
     transition: opacity 0.3s ease-in-out;
@@ -14,5 +15,8 @@
 
 .toolscardlist__button:hover {
     opacity: 0.8;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+ }
+
+ #light .toolscardlist__button {
+    background-color: #00BFFF;
  }
