--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,5 +2,5 @@
    min-height: calc(100vh - 84px);
    display: flex;
    flex-direction: column;
-   justify-content: space-between;
+   justify-content: flex-start;
 }
